# mailing_service_skychimp

./: .env.sample  README.md  pyproject.toml  requirements.txt
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_client_added_by.py  0003_alter_mailing_author.py  0004_mailing_start_date.py  0005_mailing_stop_date_alter_mailing_status.py  0006_alter_mailing_start_date.py  0007_alter_mailing_start_date.py  0008_alter_mailing_start_date.py  0009_alter_mailing_start_date.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglog_list.html
mailing/templates/mailing/includes/: inc_menu.html
mailing/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
users/templates/users/: login.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html  verify_message.html
