[tool.poetry]
name = "skychimp"
version = "0.1.0"
description = ""
authors = ["max_slidzen <slidzon94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
django-crontab = "^0.7.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
